安全化管理设置与运行状态
